--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="input-group mb-3">
-                    <input type="text" id="foodName" class="form-control" placeholder="Search your food item" >
+                    <input type="text" id="foodName" class="form-control" placeholder="Search your food item By First Letter" >
                     <button class="btn" type="button" id="searchFood">Search</button>
                   </div>
             </div>
