--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="input-group mb-3">
-                    <input type="text" id="foodName" class="form-control" placeholder="Search your food item By First Letter" >
+                    <input type="text" id="namefood" class="form-control" placeholder="Search your food item By First Letter" >
                     <button class="btn" type="button" id="searchFood">Search</button>
                   </div>
             </div>
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-6" id="errorHandel">
+        <div class="col-md-6" id="errorpart">
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -74,7 +74,7 @@
   <div class="container">
    <div  class="row foodMake">
     <div class="col-md-3"></div>
-     <div class="col-md-6 mb-5" id="foodDetails">
+     <div class="col-md-6 mb-5" id="Detailsfood">
       </div> 
       <div class="col-md-3"></div>
     </div>
@@ -83,7 +83,7 @@
 
 
     <div class="container" id="parentClass">
-        <div id="foodItem" class="row itemList">
+        <div id="Itemfood" class="row itemList">
         </div>
     </div>
 
